[gd_scene load_steps=9 format=3 uid="uid://b34ahafdf2bpt"]

[ext_resource type="Script" path="res://game/gameplay/Gameplay.gd" id="1_jtwcs"]
[ext_resource type="PackedScene" uid="uid://fy40g2whkeii" path="res://game/gameplay/StrumLine.tscn" id="2_i6r1x"]
[ext_resource type="Texture2D" uid="uid://dxxla7hd00vqo" path="res://assets/images/ui/healthBar.png" id="3_naaee"]
[ext_resource type="Texture2D" uid="uid://dx5xo0fug3yv0" path="res://assets/images/icons/face.png" id="4_kngdf"]
[ext_resource type="FontFile" uid="uid://bo3t3laebx8h8" path="res://assets/data/fonts/vcr.ttf" id="5_02sbc"]
[ext_resource type="Texture2D" uid="uid://cfswoa07evgxl" path="res://assets/images/ui/countdown/normal/go.png" id="8_6gggy"]
[ext_resource type="Script" path="res://game/resources/FFSprite2D.gd" id="9_7flc6"]

[sub_resource type="LabelSettings" id="LabelSettings_jxydb"]
line_spacing = 8.0
font = ExtResource("5_02sbc")
font_size = 18
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_jtwcs")

[node name="Inst" type="AudioStreamPlayer" parent="."]

[node name="Voices" type="AudioStreamPlayer" parent="."]

[node name="Game_Camera" type="Camera2D" parent="."]
position = Vector2(610, 352)

[node name="Combo_Group" type="CanvasGroup" parent="."]
position = Vector2(610, 352)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Strum_Lines" type="Node2D" parent="UI"]

[node name="CPU" parent="UI/Strum_Lines" instance=ExtResource("2_i6r1x")]
position = Vector2(310, 624)

[node name="Player" parent="UI/Strum_Lines" instance=ExtResource("2_i6r1x")]
position = Vector2(983, 627)
is_cpu = false

[node name="Health_Bar" type="TextureProgressBar" parent="UI"]
offset_left = 334.0
offset_top = 63.0
offset_right = 935.0
offset_bottom = 82.0
value = 50.0
rounded = true
fill_mode = 1
texture_under = ExtResource("3_naaee")
texture_progress = ExtResource("3_naaee")
tint_under = Color(1, 0, 0, 1)
tint_over = Color(1, 1, 1, 0)
tint_progress = Color(0.466667, 1, 0, 1)

[node name="Player_Icon" type="Sprite2D" parent="UI/Health_Bar"]
position = Vector2(340, 4)
texture = ExtResource("4_kngdf")
flip_h = true
hframes = 2
script = ExtResource("9_7flc6")

[node name="Cpu_Icon" type="Sprite2D" parent="UI/Health_Bar"]
position = Vector2(279, 3)
texture = ExtResource("4_kngdf")
hframes = 2
script = ExtResource("9_7flc6")

[node name="Score_Text" type="Label" parent="UI/Health_Bar"]
layout_mode = 0
offset_top = 34.0
offset_right = 601.0
offset_bottom = 58.0
text = "Placeholder, if you see this, you crashed, or you are in editor viewing it lol!!!!"
label_settings = SubResource("LabelSettings_jxydb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Judgement_Counter" type="Label" parent="UI"]
visible = false
offset_top = 276.0
offset_right = 83.0
offset_bottom = 360.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_02sbc")
theme_override_font_sizes/font_size = 20
text = "SICK: 0
GOOD: 0
BAD: 0
SHIT: 0"
vertical_alignment = 1

[node name="Autoplay_Text" type="RichTextLabel" parent="UI"]
visible = false
offset_left = 588.0
offset_top = 496.0
offset_right = 722.0
offset_bottom = 527.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("5_02sbc")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[rainbow freq=0.85 sat=0.65 val=1.35]- CPU -[/rainbow]"
autowrap_mode = 0

[node name="Countdown_Template" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(667, 325)
texture = ExtResource("8_6gggy")
script = ExtResource("9_7flc6")

[node name="Other" type="CanvasLayer" parent="."]
